--- a/default.hbs
+++ b/default.hbs
@@ -13,6 +13,7 @@
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css" rel="stylesheet" />
 
     {{!-- This tag outputes SEO meta+structured data and other important settings --}}
     {{ghost_head}}
@@ -33,6 +34,8 @@
                     <a href="{{@blog.url}}">Latest Posts</a>
                     {{#if @blog.facebook}}<a href="{{facebook_url @blog.facebook}}" target="_blank">Facebook</a>{{/if}}
                     {{#if @blog.twitter}}<a href="{{twitter_url @blog.twitter}}" target="_blank">Twitter</a>{{/if}}
+                    <a href="https://github.com/budjb" target=_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/bud-byrd-b662555b/" target="_blank">LinkedIn</a>
                     <a href="https://ghost.org" target="_blank">Ghost</a>
                 </nav>
             </div>
@@ -69,6 +72,8 @@
     </script>
     <script src="{{asset "js/infinitescroll.js"}}"></script>
     {{/if}}
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js" ></script>
 
     {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
     {{{block "scripts"}}}
