--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -19,6 +19,8 @@
             {{#if @blog.twitter}}
                 <a class="social-link social-link-tw" href="{{twitter_url @blog.twitter}}" target="_blank">{{> "icons/twitter"}}</a>
             {{/if}}
+            <a class="social-link social-link-gh" href="https://github.com/budjb" target="_blank">{{> "icons/github"}}</a>
+            <a class="social-link social-link-li" href="https://www.linkedin.com/in/bud-byrd-b662555b/" target="_blank">{{> "icons/linkedin"}}</a>
         </div>
         {{#if @labs.subscribers}}
             <a class="subscribe-button" href="#subscribe">Subscribe</a>
